--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=9012
 HTTPS=true
-SSL_CRT_FILE=d:/mkcert/localhost+2.pem
-SSL_KEY_FILE=d:/mkcert/localhost+2-key.pem
+SSL_CRT_FILE=c:/workspace/mkcert/localhost+2.pem
+SSL_KEY_FILE=c:/workspace/mkcert/localhost+2-key.pem
