--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.1.4"
   },
   "scripts": {
     "format": "prettier --write \"src/**/*.tsx\" \"src/**/*.ts\" ",
