--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "jest-styled-components": "^7.0.8",
+    "node-sass": "^7.0.3",
     "prettier": "^2.6.2"
   }
 }
