--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.21.2",
     "jest-styled-components": "^7.0.8",
     "node-sass": "^7.0.3",
     "prettier": "^2.6.2"
