--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
     "file-saver": "^2.0.5",
+    "immer": "^9.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
@@ -56,7 +57,6 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.21.2",
-    "jest-styled-components": "^7.0.8",
     "node-sass": "^7.0.3",
     "prettier": "^2.6.2"
   }
