--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.4"
