--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start:test": "set \"REACT_APP_ENV=test\" && react-scripts start",
     "build": "react-scripts build",
     "build:test": "set \"REACT_APP_ENV=test\" && react-scripts build",
+    "build:prod": "set \"REACT_APP_ENV=production\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
